Add supareset-remote command

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "supadev": "npx supabase start && npx supabase functions serve --env-file ./.env",
     "supareset": "npx supabase stop --no-backup && npm run supadev",
+    "supareset-remote": "npx supabase db reset --linked && npx supabase secrets set --env-file ./.env",
     "build": "next build",
     "start": "next start"
   },
