update supa remote cli

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "supadev": "npx supabase start && npx supabase functions serve --env-file ./.env",
-    "supareset": "npx supabase stop --no-backup && npm run supadev",
-    "supareset-remote": "npx supabase functions deploy && npx supabase secrets set --env-file ./.env && npx supabase db reset --linked",
+    "supa-dev": "npx supabase start && npx supabase functions serve --env-file ./.env",
+    "supa-reset": "npx supabase stop --no-backup && npm run supa-dev",
+    "supa-remote-reset": "npx supabase db reset --linked",
+    "supa-remote-env": "npx supabase secrets set --env-file ./.env",
     "build": "next build",
     "start": "next start",
     "fix": "eslint . --fix --ext .js,.jsx,.ts,.tsx"
