--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,8 @@
     "supabase/functions"
   ],
   "deno.lint": true,
-  "deno.unstable": true,
   "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "denoland.vscode-deno"
   },
   "deno.enable": true
 }
