--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "supa-dev": "npx supabase start -x storage-api -x imgproxy -x mailpit -x logflare -x vector -x edge-runtime && supabase db reset && npx -y supabase gen types typescript --local >./supabase/functions/_types/database.types.g.ts && npx supabase functions serve --env-file ./.env",
     "next-build": "next build",
     "next-start": "next start",
-    "fix": "eslint . --fix --ext .js,.jsx,.ts,.tsx"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier . --write",
+    "quality": "npm run format && npm run typecheck && npm run lint"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -26,11 +29,13 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@tsconfig/strictest": "^2.0.5",
     "@types/node": "22.15.17",
     "@types/react": "19.1.3",
     "@types/react-dom": "19.1.3",
     "@types/uuid": "^10.0.0",
     "encoding": "^0.1.13",
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "prettier": "3.5.3"
   }
 }
