Fix all lint errors

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "denoland.vscode-deno",
-    "github.vscode-github-actions"
-  ]
+  "recommendations": ["denoland.vscode-deno", "github.vscode-github-actions"]
 }
