--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-  "recommendations": ["denoland.vscode-deno", "github.vscode-github-actions"]
+  "recommendations": [
+    "denoland.vscode-deno",
+    "github.vscode-github-actions",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode"
+  ]
 }
