--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material-nextjs": "^7.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-query": "^5.75.7",
     "autoprefixer": "10.4.21",
     "next": "latest",
     "postcss": "8.5.3",
