--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ yarn-error.log*
 next-env.d.ts
 
 **/.claude/settings.local.json
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
