--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "format": "prettier . --write",
-    "quality": "npm run format && npm run typecheck && npm run lint"
+    "e2e": "playwright test",
+    "quality": "npm run format && npm run typecheck && npm run lint && npm run e2e"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -30,6 +31,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "22.15.17",
     "@types/react": "19.1.3",
