--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,5 +68,5 @@ jobs:
           version: latest
 
       - run: supabase link --project-ref $SUPABASE_PROJECT_ID
-      - run: echo 'y' | supabase db reset --db-url $SUPABASE_DB_URL
+      # - run: echo 'y' | supabase db reset --db-url $SUPABASE_DB_URL
       - run: supabase functions deploy --project-ref $SUPABASE_PROJECT_ID
