--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "format": "prettier . --write",
-    "e2e": "playwright test",
+    "e2e": "playwright test --headed",
     "quality": "npm run format && npm run typecheck && npm run lint && npm run e2e"
   },
   "dependencies": {
