--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "next-start": "next start",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
+    "lint-deno": "cd supabase/functions && deno lint && deno check",
     "format": "prettier . --write",
     "e2e": "playwright test --headed",
-    "quality": "npm run format && npm run typecheck && npm run lint && npm run e2e"
+    "quality": "npm run format && npm run typecheck && npm run lint && npm run lint-deno && npm run e2e"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
