--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "lint-deno": "cd supabase/functions && deno lint && deno check",
+    "test-deno": "cd supabase/functions && deno test --allow-all",
     "format": "prettier . --write",
     "e2e": "playwright test --headed",
-    "quality": "npm run format && npm run typecheck && npm run lint && npm run lint-deno && npm run e2e"
+    "quality": "npm run format && npm run typecheck && npm run lint && npm run lint-deno && npm run test-deno && npm run e2e"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
