--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.75.7",
     "autoprefixer": "10.4.21",
+    "framer-motion": "^12.12.2",
     "next": "latest",
     "postcss": "8.5.3",
     "react": "19.1.0",
