--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@tanstack/react-query": "^5.75.7",
     "autoprefixer": "10.4.21",
     "framer-motion": "^12.12.2",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
     "next": "latest",
     "postcss": "8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^15.5.2",
     "react-qr-code": "^2.0.15",
     "typescript": "5.8.3",
     "uuid": "^11.1.0"
