--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint-deno": "cd supabase/functions && deno lint && deno check",
     "test-deno": "cd supabase/functions && deno test --allow-all",
     "format": "prettier . --write",
-    "e2e": "playwright test --headed",
+    "e2e": "playwright test --headed --workers=1",
     "quality": "npm run format && npm run typecheck && npm run lint && npm run lint-deno && npm run test-deno && npm run e2e"
   },
   "dependencies": {
